// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon slot 1`] = `
<div role="alert" class="van-notice-bar">Custom Left Icon<div role="marquee" class="van-notice-bar__wrap">
    <div class="van-notice-bar__content" style="transition-duration: 0s;">
      Content
    </div>
  </div>Custom Right Icon</div>
`;

exports[`should not scroll when content width > wrap width  1`] = `
<div role="alert" class="van-notice-bar">
  <div role="marquee" class="van-notice-bar__wrap">
    <div class="van-notice-bar__content" style="transition-duration: 0s;">foo</div>
  </div>
</div>
`;

exports[`should scroll when content width > wrap width  1`] = `
<div role="alert" class="van-notice-bar">
  <div role="marquee" class="van-notice-bar__wrap">
    <div class="van-notice-bar__content" style="transition-duration: 1.6666666666666667s; transform: translateX(-100px);">foo</div>
  </div>
</div>
`;
